user name in register
